# raspberry-pi-fpv-visor

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: auto-viseur.hpp  car-service-torment-ecx.hpp  car-service.hpp  hello-world.hpp  i2c-client-mock.hpp  i2c-client-wiringpi.hpp  image-capture-service-from-camera.hpp  image-capture-service.hpp  main-window.hpp  notifier.hpp  pixbuf-mat.hpp  service-locator.hpp
raspberry-pi-fpv-visor/: main.cpp
raspberry-pi-fpv-visor.xcodeproj/: project.pbxproj
raspberry-pi-fpv-visor.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
raspberry-pi-fpv-visor.xcodeproj/xcuserdata/jmgonet.xcuserdatad/xcschemes/: raspberry-pi-fpv-visor.xcscheme  xcschememanagement.plist
src/: CMakeLists.txt  auto-viseur.cpp  car-service-torment-ecx.cpp  car-service.cpp  car-service.hpp  hello-world.cpp  i2c-client-mock.cpp  i2c-client-wiringpi.cpp  image-capture-service-from-camera.cpp  main-window.cpp  main.cpp  pixbuf-mat.cpp  service-locator.cpp
src/app/: CMakeLists.txt  Info.plist  auto-viseur.cpp  auto-viseur.hpp  main-window.cpp  main-window.hpp  main.cpp
src/lib/: CMakeLists.txt  lib-config.h.in  test-config.h.in
src/lib/include/: car-service-torment-ecx.hpp  car-service.hpp  event-bus-service.hpp  i2c-client-mock.hpp  i2c-client-wiringpi.hpp  i2c-client.hpp  image-capture-service-from-camera.hpp  image-capture-service.hpp  pedestrian-detector-opencv.hpp  pedestrian-detector.hpp  service-locator.hpp  video-stream-writer-impl.hpp  video-stream-writer.hpp
src/lib/src/: car-service-torment-ecx.cpp  event-bus-service.cpp  i2c-client-mock.cpp  i2c-client-wiringpi.cpp  image-capture-service-from-camera.cpp  image-capture-service.cpp  pedestrian-detector-opencv.cpp  service-locator.cpp  video-stream-writer-impl.cpp
src/lib/test/: car-service-torment-ecx-test.cpp  event-bus-service-test.cpp  main-test.cpp  pedestrian-detector-opencv-test.cpp  video-stream-writer-impl-test.cpp
